# animal-crossing-bot

./: .gitignore  Cargo.toml  README.md  data.json
src/: main.rs  posting.rs  waiting.rs
src/posting/: data.rs  image_editing.rs
